# Proofdive_interview_poc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  model_config.py
app/graph/: graph.py  state.py
app/graph/nodes/: car_agent.py  orchestrator.py  phase_agents.py  report_agent.py
app/prompts/candidate/: candidate_normal.prompt  candidate_strong.prompt
app/prompts/car/: car_evaluation.prompt
app/prompts/evaluator/: evaluator_system.prompt  evidence_extractor.prompt  rubric.json  scorer.prompt
app/prompts/orchestrator/: orchestrator_system.prompt
app/prompts/phases/: 01_intro.prompt  02_thinking.prompt  03_action.prompt  04_people.prompt  05_mastery.prompt  06_close.prompt
app/services/: candidate.py  evaluator.py  llm.py
app/ui/: components.py  screens.py
